--- a/en/us/help/contact-lufthansa-airlines-customer-service.html
+++ b/en/us/help/contact-lufthansa-airlines-customer-service.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-  <h1>Contact Lufthansa Airlines® Customer Service</h1>
+  <h1>Twelve Ways to Reach How Can I Speak to Someone at Lufthansa Airlines™: A Step-By-Step Comprehensive Guide</h1>
 
   <p>Reaching a live representative at Lufthansa Airlines® can make all the difference. You can call <strong>1-888-486-3822</strong> or Lufthansa Airlines® (US/OTA) to speak directly with an agent—available 24/7. Whether it’s booking issues, cancellations, refunds, or technical problems, this guide walks you through every contact method available so your concerns are handled quickly and easily.</p>
 
